# 2DWave_Equation

./: CMakeLists.txt  README.md
Parallel/: Parallel.c  Parallel_new.c
Serial/: main.c
